--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hero {
+    margin-top: -100px;
+    z-index: -3;
+}
+
+.switcher {
+    z-index: 1;
+}
