--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -14,6 +14,14 @@ h1 {
     color: #be1621;
 }
 
+@media (max-width: 768px) { /* Ajusta el punto de ruptura según tus necesidades */
+    h1 {
+        margin-top: 25px;
+        font-size: 40px; /* Tamaño de fuente reducido a la mitad */
+        line-height: 30px !important;
+    }
+}
+
 @tailwind utilities;
 
 .hero {
