--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -25,6 +25,19 @@ h1 {
 
 @tailwind utilities;
 
+nav a {
+    color: #940014; /* Color del texto del enlace */
+    text-decoration: none; /* Remueve el subrayado por defecto */
+    padding: 8px 12px; /* Añade algo de espacio alrededor del enlace */
+    transition: color 0.3s ease, border-bottom 0.3s ease; /* Transición suave */
+    border-bottom: 2px solid transparent; /* Añade un borde inferior invisible */
+}
+
+nav a:hover {
+    color: #d66d6d; /* Cambia el color al pasar el cursor */
+    border-bottom: 2px solid #d66d6d; /* Subraya el enlace al pasar el cursor */
+}
+
 .hero {
     margin-top: -100px;
     z-index: -3;
