--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -113,10 +113,10 @@ nav a:hover {
 }
 
 /* globals.css o un archivo específico para el componente */
-.disqus-container {
-    width: 100%; /* Puedes ajustar este valor */
-    max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
-    height: 500px; /* Ajusta la altura según tus necesidades */
-    margin: 0 auto; /* Centra el contenedor */
-    background-color: white;
+
+.title-testimonios {
+    margin-top: -50px;
 }
+
+/* .graphcomment {
+} */
