--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -11,7 +11,7 @@
 h1 {
     font-family: 'ZapfinoLinotypeOne', sans-serif;
     font-size: 60px;
-    color: #be1621;
+    color: #0e3381;
 }
 
 @media (max-width: 768px) {
@@ -35,8 +35,8 @@ nav a {
 }
 
 nav a:hover {
-    color: #d66d6d; /* Cambia el color al pasar el cursor */
-    border-bottom: 2px solid #d66d6d; /* Subraya el enlace al pasar el cursor */
+    color: #0e3381; /* Cambia el color al pasar el cursor */
+    border-bottom: 2px solid #0e3381; /* Subraya el enlace al pasar el cursor */
 }
 
 .hero {
@@ -93,7 +93,7 @@ nav a:hover {
 }
 
 .rc-card-title {
-    color: #be1621 !important; /* Rojo personalizado */
+    color: #0e3381 !important; /* Azul personalizado */
     padding-top: 10px;
 }
 
